<resources>
    <string name="app_name" translatable="false">See Transport</string>

    <string name="settingsName">Settings</string>

    <string name="goBack">Go main</string>

    <string name="CityHint">ex. Izhevsk</string>

    <string name="TranspNumHint">ex. 12</string>

    <string name="insertTranspNum">Enter transport number</string>

    <string name="choseTranspType">Select transport type</string>

    <string name="choseSchemaCity">Select city</string>

    <string name="chooseHowManyBlocks">Select the number of blocks</string>

    <string name="insertCityName">Select city</string>

    <string name="Apply">Apply</string>

    <string name="Delete_save">Delete save file</string>

    <string name="instruction">Tap and hold.</string>

    <string name="Choose">Choose</string>

    <string name="schema_add_title">Adding a Metro Map</string>

    <string name="Change_language">Select a language</string>

    <string name="Change_text_size">Font size</string>

    <string name="first_fragment_label" translatable="false">First Fragment</string>

    <string name="second_fragment_label" translatable="false">Second Fragment</string>

    <string name="next" translatable="false">Next</string>

    <string name="previous" translatable="false">Previous</string>

    <string name="TitleText">Your transport</string>

    <string name="GitHubLink">Suggestions and bugs found, please send to the issues section on the website: https://github.com/Bob-Jacka/AndroidSeeBuses/issues</string>
    <string name="NoData">No data</string>
    <string name="CheckInternet">Check your internet connection</string>
    <string name="ChngApplied">Changes applied</string>
    <string name="FontNotSupp">Font larger than 20 and smaller than 10 is not supported</string>
    <string name="BlocksNotSupp">The number of blocks equal to 3 or lower is not supported</string>
    <string name="SuchTransp">Such transport already exists</string>
    <string name="FillAllData">Fill in all the data</string>
    <string name="SuchSchema">Such schema already exists</string>
    <string name="ErrSaveFile">Error saving to file</string>
    <string name="ErrSaveContVars">Error saving control variables to a file</string>
    <string name="ErrSaveTB">Error saving the transport block to a file</string>
    <string name="ErrSaveMetroSchema">Error saving the metro map to a file</string>
    <string name="ErrLoadFromFile">Error loading from file</string>
    <string name="ErrReadCntrlVars">Error reading control variables from a file</string>
    <string name="ErrReadTBParams">Error reading transport parameters from a file</string>
    <string name="FileDelete">File deleted</string>
    <string name="CityWithMetro">"City with metro -> "</string>
    <string name="Bus">Bus</string>
    <string name="Trolleybus">Trolleybus</string>
    <string name="Tram">Tram</string>
    <string name="TransportTypes">Transport types</string>
    <string name="Cities">Cities</string>
    <string name="Add">Add -></string>
    <string name="Transport">Transport</string>
    <string name="MetroMap">Metro map</string>
    <string name="Close">Close</string>
    <string name="Delete">Delete</string>
    <string name="Change">Change</string>
    <string name="Transport2">Transport -></string>
    <string name="Wait">Please, wait</string>
    <string name="toExit">Press \"Back\" one more time</string>

</resources>