<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Change_Transport">


    <LinearLayout
        android:id="@+id/ChoseBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApplyCancelBtns"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/inputTranspNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:background="@color/blockChose"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/insertTranspTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:text="@string/insertTranspNum"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                app:boxBackgroundColor="@color/blockBackground"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/chooseTransportNum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:hint="@string/TranspNumHint"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    tools:ignore="RtlCompat" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/choseTranspType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@color/blockChose"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chooseTranspType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/choseTranspType"
                android:textSize="16sp" />

            <Button
                android:id="@+id/choseBtn"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:backgroundTint="@color/busButtonColor"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/Choose"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputTranspCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@color/blockChose"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/insertTranspCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:text="@string/insertCityName"
                android:textSize="16sp" />

            <Button
                android:id="@+id/choseCityBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="73dp"
                android:layout_weight="1"
                android:backgroundTint="@color/busButtonColor"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/Choose"
                app:cornerRadius="0dp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ApplyCancelBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/ApplyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/busButtonColor"
            android:clickable="true"
            android:onClick="onAccept"
            android:text="@string/Apply"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/CancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/busButtonColor"
            android:clickable="true"
            android:onClick="goMain"
            android:text="@string/Cancel"
            app:cornerRadius="0dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>